Update index.html - Our Solutions section

--- a/index.html
+++ b/index.html
@@ -129,95 +129,71 @@
     </section>
 
     <!-- Solutions Section -->
-    <section id="solutions" class="container mx-auto px-6 py-20 bg-gradient-to-b from-[#1a103d] to-[#0f0c29]">
-        <div class="max-w-6xl mx-auto">
-            <div class="text-center mb-16">
-                <h2 class="text-3xl md:text-5xl font-bold mb-4">
-                    <span class="gradient-text">What</span> We Do
-                </h2>
-                <p class="text-xl text-gray-300 max-w-3xl mx-auto">
-                    Modular, ready-to-use platforms for the real world. No training required.
-                </p>
-            </div>
+    <section class="py-20 bg-white" id="solutions">
+  <div class="max-w-6xl mx-auto px-6 text-center">
+    <h2 class="text-4xl font-bold mb-6 text-gray-900">🧩 Our Solutions</h2>
+    <p class="text-lg text-gray-600 mb-12">Tailored automation. Real results.</p>
 
-            <div class="grid md:grid-cols-2 gap-6">
-                <!-- Solution Cards -->
-                <div class="bg-gradient-to-br from-[#1f1c2c] to-[#928dab] p-6 rounded-xl shadow-lg card-hover transition group">
-                    <div class="flex items-start">
-                        <div class="bg-pink-600 p-3 rounded-lg mr-4 group-hover:rotate-12 transition">
-                            <i class="fas fa-user-friends text-white text-xl"></i>
-                        </div>
-                        <div>
-                            <h3 class="text-xl font-semibold mb-2 text-pink-300">Candidate Automation</h3>
-                            <p class="text-gray-200">Streamline workforce development and intake processes with our intelligent candidate management system.</p>
-                        </div>
-                    </div>
-                </div>
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 text-left">
+      
+      <div class="p-6 border rounded-2xl shadow hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-gray-800 mb-2">AngelOps</h3>
+        <p class="text-gray-600">Remote elderly care, powered by emotion, safety, and peace of mind.</p>
+      </div>
 
-                <div class="bg-gradient-to-br from-[#1f1c2c] to-[#928dab] p-6 rounded-xl shadow-lg card-hover transition group">
-                    <div class="flex items-start">
-                        <div class="bg-pink-600 p-3 rounded-lg mr-4 group-hover:rotate-12 transition">
-                            <i class="fas fa-camera text-white text-xl"></i>
-                        </div>
-                        <div>
-                            <h3 class="text-xl font-semibold mb-2 text-pink-300">Facial Attendance</h3>
-                            <p class="text-gray-200">Effortless tracking using facial recognition photos with privacy-first design.</p>
-                        </div>
-                    </div>
-                </div>
+      <div class="p-6 border rounded-2xl shadow hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-gray-800 mb-2">BJJ OPS</h3>
+        <p class="text-gray-600">All-in-one automation for jiu-jitsu academies: attendance, belt tracking, and payments.</p>
+      </div>
 
-                <div class="bg-gradient-to-br from-[#1f1c2c] to-[#928dab] p-6 rounded-xl shadow-lg card-hover transition group">
-                    <div class="flex items-start">
-                        <div class="bg-pink-600 p-3 rounded-lg mr-4 group-hover:rotate-12 transition">
-                            <i class="fas fa-credit-card text-white text-xl"></i>
-                        </div>
-                        <div>
-                            <h3 class="text-xl font-semibold mb-2 text-pink-300">Smart Payments</h3>
-                            <p class="text-gray-200">Full control of subscriptions, plans, and automated billing with real-time analytics.</p>
-                        </div>
-                    </div>
-                </div>
+      <div class="p-6 border rounded-2xl shadow hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-gray-800 mb-2">HostOps+</h3>
+        <p class="text-gray-600">Smart platform for property and cleaning management, made for Airbnb-style operations.</p>
+      </div>
 
-                <div class="bg-gradient-to-br from-[#1f1c2c] to-[#928dab] p-6 rounded-xl shadow-lg card-hover transition group">
-                    <div class="flex items-start">
-                        <div class="bg-pink-600 p-3 rounded-lg mr-4 group-hover:rotate-12 transition">
-                            <i class="fas fa-comments text-white text-xl"></i>
-                        </div>
-                        <div>
-                            <h3 class="text-xl font-semibold mb-2 text-pink-300">Conversational Flows</h3>
-                            <p class="text-gray-200">Automated onboarding and alerts via WhatsApp, Telegram, and SMS with natural language processing.</p>
-                        </div>
-                    </div>
-                </div>
+      <div class="p-6 border rounded-2xl shadow hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-gray-800 mb-2">FitStream</h3>
+        <p class="text-gray-600">A complete system for fitness centers: memberships, classes, attendance, and finance.</p>
+      </div>
 
-                <div class="md:col-span-2 bg-gradient-to-br from-[#1f1c2c] to-[#928dab] p-8 rounded-xl shadow-lg card-hover transition">
-                    <h3 class="text-2xl font-semibold mb-4 text-center text-pink-300">Custom SaaS Systems</h3>
-                    <div class="grid md:grid-cols-2 lg:grid-cols-5 gap-4 text-center">
-                        <div class="bg-white/10 p-4 rounded-lg hover:bg-white/20 transition">
-                            <i class="fas fa-hard-hat text-pink-400 text-2xl mb-2"></i>
-                            <p>Construction Ops</p>
-                        </div>
-                        <div class="bg-white/10 p-4 rounded-lg hover:bg-white/20 transition">
-                            <i class="fas fa-dumbbell text-pink-400 text-2xl mb-2"></i>
-                            <p>Gym & Martial Arts</p>
-                        </div>
-                        <div class="bg-white/10 p-4 rounded-lg hover:bg-white/20 transition">
-                            <i class="fas fa-user-nurse text-pink-400 text-2xl mb-2"></i>
-                            <p>Elderly Remote Care</p>
-                        </div>
-                        <div class="bg-white/10 p-4 rounded-lg hover:bg-white/20 transition">
-                            <i class="fas fa-home text-pink-400 text-2xl mb-2"></i>
-                            <p>Rental & Property</p>
-                        </div>
-                        <div class="bg-white/10 p-4 rounded-lg hover:bg-white/20 transition">
-                            <i class="fas fa-landmark text-pink-400 text-2xl mb-2"></i>
-                            <p>Public Sector</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+      <div class="p-6 border rounded-2xl shadow hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-gray-800 mb-2">OPS Property Management</h3>
+        <p class="text-gray-600">Powerful solution for property managers: centralized control and crystal-clear reporting.</p>
+      </div>
+
+      <div class="p-6 border rounded-2xl shadow hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-gray-800 mb-2">Cleaning Management</h3>
+        <p class="text-gray-600">Agile system for cleaning businesses: schedules, photos, recurring jobs, and checklists.</p>
+      </div>
+
+      <div class="p-6 border rounded-2xl shadow hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-gray-800 mb-2">Inventory Management System</h3>
+        <p class="text-gray-600">Smart inventory tracking for small businesses: stock in/out, barcodes, and analytics.</p>
+      </div>
+
+      <div class="p-6 border rounded-2xl shadow hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-gray-800 mb-2">HiMyClient</h3>
+        <p class="text-gray-600">A minimalist CRM for teams who want clarity and control over every interaction.</p>
+      </div>
+
+      <div class="p-6 border rounded-2xl shadow hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-gray-800 mb-2">Farm Guardian</h3>
+        <p class="text-gray-600">Rural safety and operational control for farms and country houses, with a prevention-first mindset.</p>
+      </div>
+
+      <div class="p-6 border rounded-2xl shadow hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold text-gray-800 mb-2">Airbnb Tools</h3>
+        <p class="text-gray-600">Practical tools for Airbnb hosts who want more control, automation, and peace of mind.</p>
+      </div>
+
+    </div>
+
+    <div class="mt-12">
+      <a href="#contact" class="inline-block bg-gradient-to-r from-pink-500 to-purple-500 text-white px-8 py-3 rounded-full shadow hover:scale-105 transition">I want my system</a>
+    </div>
+  </div>
+</section>
+
 
     <!-- Differentiators Section -->
     <section id="different" class="container mx-auto px-6 py-20">
