Update index.html - add Isaiah 41:10

--- a/index.html
+++ b/index.html
@@ -378,6 +378,18 @@
                 <p>Automation should serve people — not replace them.</p>
             </div>
         </div>
+        <!-- ... conteúdo atual do footer -->
+
+<div class="mt-8 text-center">
+  <p class="italic text-sm text-gray-400 leading-relaxed">
+    "So do not fear, for I am with you; do not be dismayed, for I am your God. <br>
+    I will strengthen you and help you; I will uphold you with my righteous right hand." <br>
+    <span class="font-semibold">— Isaiah 41:10</span>
+  </p>
+</div>
+
+</footer>
+
     </footer>
 
     <!-- Floating WhatsApp Button -->
