Update index.html - footer was improved

--- a/index.html
+++ b/index.html
@@ -350,47 +350,40 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-[#0a071a] py-12">
-        <div class="container mx-auto px-6">
-            <div class="flex flex-col md:flex-row justify-between items-center">
-                <div class="flex items-center space-x-2 mb-6 md:mb-0">
-                    <img src="https://i.imgur.com/pOI8Z9f.png" alt="HUGANA Logo" class="h-10">
+    <footer class="bg-[#0D0B1F] text-gray-400 py-10 px-6 text-center mt-20">
+  <div class="max-w-6xl mx-auto">
 
+    <!-- Logo Hugana -->
+    <div class="flex justify-center items-center mb-6">
+      <img src="/logo-hugana.png" alt="Hugana Logo" class="h-8 mr-2">
+      <span class="text-xl font-bold bg-gradient-to-r from-pink-500 to-purple-500 bg-clip-text text-transparent">HUGANA</span>
+    </div>
 
-                    <span class="text-xl font-bold gradient-text">HUGANA</span>
-                </div>
-                <div class="flex space-x-6 mb-6 md:mb-0">
-                    <a href="#" class="text-gray-400 hover:text-pink-400 transition">
-                        <i class="fab fa-twitter text-xl"></i>
-                    </a>
-                    <a href="#" class="text-gray-400 hover:text-pink-400 transition">
-                        <i class="fab fa-linkedin text-xl"></i>
-                    </a>
-                    <a href="#" class="text-gray-400 hover:text-pink-400 transition">
-                        <i class="fab fa-github text-xl"></i>
-                    </a>
-                </div>
-                <div class="text-gray-400 text-sm">
-                    © 2023 HUGANA Technologies. All rights reserved.
-                </div>
-            </div>
-            <div class="border-t border-white/10 mt-8 pt-8 text-center text-gray-500 text-sm">
-                <p>Automation should serve people — not replace them.</p>
-            </div>
-        </div>
-        <!-- ... conteúdo atual do footer -->
+    <!-- Redes sociais -->
+    <div class="flex justify-center gap-6 mb-6 text-white">
+      <a href="https://www.instagram.com/opscreativesolutions" target="_blank" rel="noopener noreferrer" class="hover:text-pink-500 transition">
+        <i class="fab fa-instagram text-2xl"></i>
+      </a>
+    </div>
 
-<div class="mt-8 text-center">
-  <p class="italic text-sm text-gray-400 leading-relaxed">
-    "So do not fear, for I am with you; do not be dismayed, for I am your God. <br>
-    I will strengthen you and help you; I will uphold you with my righteous right hand." <br>
-    <span class="font-semibold">— Isaiah 41:10</span>
-  </p>
-</div>
+    <!-- Frase de impacto -->
+    <p class="text-sm text-gray-400 mb-6">Automation should serve people — not replace them.</p>
 
+    <!-- Versículo -->
+    <p class="italic text-sm text-gray-300 leading-relaxed max-w-xl mx-auto mb-4">
+      "So do not fear, for I am with you; do not be dismayed, for I am your God. <br>
+      I will strengthen you and help you; I will uphold you with my righteous right hand." <br>
+      <span class="font-semibold">— Isaiah 41:10</span>
+    </p>
+
+    <!-- Créditos -->
+    <p class="text-xs text-gray-500 mt-6">
+      © 2025 HUGANA Technologies. Powered by <a href="https://www.instagram.com/opscreativesolutions" class="underline hover:text-pink-500">Ops! Creative Solutions</a>.
+    </p>
+
+  </div>
 </footer>
 
-    </footer>
 
     <!-- Floating WhatsApp Button -->
 <div class="fixed bottom-6 right-6 z-50">
