Update index.html - footer was improved

--- a/index.html
+++ b/index.html
@@ -349,41 +349,42 @@
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="bg-[#0D0B1F] text-gray-400 py-10 px-6 text-center mt-20">
-  <div class="max-w-6xl mx-auto">
+    <footer class="bg-[#0D0B1F] text-gray-400 px-6 pt-12 pb-8 text-sm mt-20">
+  <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center">
 
-    <!-- Logo Hugana -->
-    <div class="flex justify-center items-center mb-6">
-      <img src="/logo-hugana.png" alt="Hugana Logo" class="h-8 mr-2">
+    <!-- Logo Hugana à esquerda -->
+    <div class="flex items-center mb-6 md:mb-0">
+      <img src="https://imgur.com/pOI8Z9f.png" alt="Hugana Logo" class="h-8 mr-2">
       <span class="text-xl font-bold bg-gradient-to-r from-pink-500 to-purple-500 bg-clip-text text-transparent">HUGANA</span>
     </div>
 
-    <!-- Redes sociais -->
-    <div class="flex justify-center gap-6 mb-6 text-white">
+    <!-- Ícone Instagram alinhado à direita -->
+    <div class="flex justify-end w-full md:w-auto mb-6 md:mb-0">
       <a href="https://www.instagram.com/opscreativesolutions" target="_blank" rel="noopener noreferrer" class="hover:text-pink-500 transition">
         <i class="fab fa-instagram text-2xl"></i>
       </a>
     </div>
+  </div>
 
-    <!-- Frase de impacto -->
-    <p class="text-sm text-gray-400 mb-6">Automation should serve people — not replace them.</p>
+  <!-- Copyright + Powered by -->
+  <div class="text-center mt-2 text-xs text-gray-500 leading-snug">
+    <p>© 2025 HUGANA Technologies.</p>
+    <p>Powered by <a href="https://www.instagram.com/opscreativesolutions" class="underline hover:text-pink-500">Ops! Creative Solutions</a>.</p>
+  </div>
 
-    <!-- Versículo -->
-    <p class="italic text-sm text-gray-300 leading-relaxed max-w-xl mx-auto mb-4">
+  <!-- Linha -->
+  <hr class="my-6 border-gray-700">
+
+  <!-- Frase e versículo -->
+  <div class="text-center max-w-2xl mx-auto">
+    <p class="mb-2">Automation should serve people — not replace them.</p>
+    <p class="italic text-sm text-gray-300 leading-relaxed">
       "So do not fear, for I am with you; do not be dismayed, for I am your God. <br>
       I will strengthen you and help you; I will uphold you with my righteous right hand." <br>
       <span class="font-semibold">— Isaiah 41:10</span>
     </p>
-
-    <!-- Créditos -->
-    <p class="text-xs text-gray-500 mt-6">
-      © 2025 HUGANA Technologies. Powered by <a href="https://www.instagram.com/opscreativesolutions" class="underline hover:text-pink-500">Ops! Creative Solutions</a>.
-    </p>
-
   </div>
 </footer>
-
 
     <!-- Floating WhatsApp Button -->
 <div class="fixed bottom-6 right-6 z-50">
