--- a/index.html
+++ b/index.html
@@ -328,25 +328,35 @@
             
             <div class="bg-white/5 p-8 rounded-xl border border-white/10 backdrop-blur-sm max-w-2xl mx-auto">
                 <h3 class="text-2xl font-semibold mb-6">Let's Build Together</h3>
-                <form class="space-y-4 text-left">
-                    <div>
-                        <label for="name" class="block text-left mb-1">Your Name</label>
-                        <input type="text" id="name" class="w-full bg-white/10 border border-white/20 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-pink-500">
-                    </div>
-                    <div>
-                        <label for="email" class="block text-left mb-1">Email</label>
-                        <input type="email" id="email" class="w-full bg-white/10 border border-white/20 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-pink-500">
-                    </div>
-                    <div>
-                        <label for="message" class="block text-left mb-1">How Can We Help?</label>
-                        <textarea id="message" rows="4" class="w-full bg-white/10 border border-white/20 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-pink-500"></textarea>
-                    </div>
-                    <button type="submit" class="w-full px-6 py-4 bg-pink-600 text-white rounded-full hover:bg-pink-700 transition transform hover:scale-105 mt-6">
-                        Send Message <i class="fas fa-paper-plane ml-2"></i>
-                    </button>
-                </form>
-            </div>
-        </div>
+                <section class="py-20 bg-[#131128] text-center text-white" id="contact">
+  <div class="max-w-2xl mx-auto px-6">
+    <h2 class="text-4xl font-bold mb-6">Let's Talk</h2>
+    <p class="text-lg text-gray-300 mb-10">We're here to help. Get in touch with our team.</p>
+
+    <!-- Email -->
+    <div class="mb-4">
+      <a href="mailto:contact@hugana.com" class="text-pink-400 hover:underline text-lg">
+        contact@hugana.com
+      </a>
+    </div>
+
+    <!-- Phone -->
+    <div class="mb-6">
+      <a href="tel:+14079280183" class="text-purple-400 hover:underline text-lg">
+        (407) 928-0183
+      </a>
+    </div>
+
+    <!-- Instagram -->
+    <div class="flex justify-center">
+      <a href="https://www.instagram.com/opscreativesolutions" target="_blank" rel="noopener noreferrer"
+         class="text-white hover:text-pink-500 transition text-2xl">
+        <i class="fab fa-instagram"></i>
+      </a>
+    </div>
+  </div>
+</section>
+
     </section>
 
     <footer class="bg-[#0D0B1F] text-gray-400 px-6 pt-12 pb-8 text-sm mt-20">
