--- a/index.html
+++ b/index.html
@@ -316,15 +316,21 @@
                 <span class="block text-pink-400 font-semibold mt-2">Real software. Real outcomes. Built fast.</span>
             </p>
             
-            <div class="bg-gradient-to-r from-[#1f1c2c] to-[#928dab] p-1 rounded-full max-w-md mx-auto mb-10">
-                <div class="bg-[#0f0c29] p-8 rounded-full">
-                    <p class="text-xl italic text-gray-300 mb-6">
-                        "If it doesn't exist, we'll build it. If it does, we'll make it better."
-                    </p>
-                    <div class="w-16 h-1 bg-pink-500 mx-auto mb-6"></div>
-                    <p class="text-sm text-gray-400">HUGANA Development Principle</p>
-                </div>
-            </div>
+           <div class="relative bg-[#1D1936] border-4 border-purple-500/40 rounded-[2.5rem] p-10 shadow-2xl overflow-hidden transform transition hover:scale-[1.015] hover:shadow-purple-800/30">
+  <svg class="absolute -top-6 -left-6 w-28 h-28 opacity-5 rotate-12 pointer-events-none" fill="none" stroke="white" stroke-width="1.2" viewBox="0 0 24 24">
+    <path d="M19.43 12.98a1.52 1.52 0 0 0 0-.96l2.11-1.65a.38.38 0 0 0 .09-.49l-2-3.46a.38.38 0 0 0-.48-.16l-2.49 1a7.03 7.03 0 0 0-1.66-.96l-.38-2.65a.38.38 0 0 0-.38-.32h-4a.38.38 0 0 0-.38.32l-.38 2.65c-.6.23-1.16.55-1.66.96l-2.49-1a.38.38 0 0 0-.48.16l-2 3.46a.38.38 0 0 0 .09.49L4.57 12c-.04.16-.07.32-.07.49s.03.33.07.49L2.46 14.63a.38.38 0 0 0-.09.49l2 3.46c.1.17.31.24.48.16l2.49-1c.5.41 1.06.73 1.66.96l.38 2.65c.03.2.2.32.38.32h4c.18 0 .35-.13.38-.32l.38-2.65c.6-.23 1.16-.55 1.66-.96l2.49 1c.17.07.38 0 .48-.16l2-3.46a.38.38 0 0 0-.09-.49l-2.11-1.65Z"/>
+    <circle cx="12" cy="12" r="3.5"/>
+  </svg>
+
+  <blockquote class="text-2xl md:text-3xl italic text-gray-100 leading-snug mb-6 text-center">
+    "If it doesn't exist, we'll build it. If it does, we’ll make it better."
+  </blockquote>
+
+  <div class="h-1 w-20 bg-pink-500 rounded-full mb-4 mx-auto animate-pulse"></div>
+
+  <p class="text-sm text-gray-400 tracking-wide uppercase text-center">HUGANA Development Principle</p>
+</div>
+
             
             <div class="bg-white/5 p-8 rounded-xl border border-white/10 backdrop-blur-sm max-w-2xl mx-auto">
                 <h3 class="text-2xl font-semibold mb-6">Let's Build Together</h3>
