--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                 <span class="block text-pink-400 font-semibold mt-2">Real software. Real outcomes. Built fast.</span>
             </p>
             
-           <div class="relative bg-[#1D1936] border-4 border-purple-500/40 rounded-[2.5rem] p-10 shadow-2xl overflow-hidden transform transition hover:scale-[1.015] hover:shadow-purple-800/30">
+         <div class="relative bg-[#1D1936] border-4 border-purple-500/40 rounded-[2.5rem] p-10 shadow-2xl overflow-hidden transform transition hover:scale-[1.015] hover:shadow-purple-800/30">
   <svg class="absolute -top-6 -left-6 w-28 h-28 opacity-5 rotate-12 pointer-events-none" fill="none" stroke="white" stroke-width="1.2" viewBox="0 0 24 24">
     <path d="M19.43 12.98a1.52 1.52 0 0 0 0-.96l2.11-1.65a.38.38 0 0 0 .09-.49l-2-3.46a.38.38 0 0 0-.48-.16l-2.49 1a7.03 7.03 0 0 0-1.66-.96l-.38-2.65a.38.38 0 0 0-.38-.32h-4a.38.38 0 0 0-.38.32l-.38 2.65c-.6.23-1.16.55-1.66.96l-2.49-1a.38.38 0 0 0-.48.16l-2 3.46a.38.38 0 0 0 .09.49L4.57 12c-.04.16-.07.32-.07.49s.03.33.07.49L2.46 14.63a.38.38 0 0 0-.09.49l2 3.46c.1.17.31.24.48.16l2.49-1c.5.41 1.06.73 1.66.96l.38 2.65c.03.2.2.32.38.32h4c.18 0 .35-.13.38-.32l.38-2.65c.6-.23 1.16-.55 1.66-.96l2.49 1c.17.07.38 0 .48-.16l2-3.46a.38.38 0 0 0-.09-.49l-2.11-1.65Z"/>
     <circle cx="12" cy="12" r="3.5"/>
@@ -332,19 +332,24 @@
 </div>
 
             
-            <div class="bg-white/5 p-8 rounded-xl border border-white/10 backdrop-blur-sm max-w-2xl mx-auto">
-                <h3 class="text-2xl font-semibold mb-6">Let's Build Together</h3>
-                <section class="py-20 bg-[#131128] text-center text-white" id="contact">
-  <div class="max-w-2xl mx-auto px-6">
-    <h2 class="text-4xl font-bold mb-6">Let's Talk</h2>
-    <p class="text-lg text-gray-300 mb-10">We're here to help. Get in touch with our team.</p>
+  <section class="mt-32 text-center px-6 md:px-12">
+  
+  <div class="bg-[#0F0B1F] p-10 rounded-3xl shadow-lg max-w-2xl mx-auto">
+    <p class="text-gray-300 mb-6 text-lg">
+      Have a question or idea? Let’s connect and explore how we can build something great for you.
+    </p>
+    <p class="text-pink-400 text-lg font-medium mb-2">
+      contact@hugana.com
+    </p>
+    <p class="text-purple-300 text-lg font-medium mb-6">
+      (407) 928-0183
+    </p>
+    <a href="https://instagram.com/opscreativesolutions" target="_blank" class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-gradient-to-r from-pink-500 to-purple-600 text-white shadow-md hover:shadow-lg transition-all duration-300">
+  <i class="fab fa-instagram text-lg"></i>
+</a>
 
-    <!-- Email -->
-    <div class="mb-4">
-      <a href="mailto:contact@hugana.com" class="text-pink-400 hover:underline text-lg">
-        contact@hugana.com
-      </a>
-    </div>
+  </div>
+</section>
 
     <!-- Phone -->
     <div class="mb-6">
